	  isn't efficient and requires more work be done the more custom 
	  methods are added to their Prototype.

	  This change also means other JavaScript on the same page as HashOver 
	  will not conflict with HashOver if it happens to modify Prototypes.

	- Changed some variable names.


* hashover/scripts/htmloutput.php

	- Fixed "JavaScipt" hyperlink pointing to the wrong (old) filename.


Changes by Jacob Barkdull 2015-07-10
--------------------------------------------------------------------------------
* hashover.js,
  hashover/scripts/javascript-mode.php,
  hashover/scripts/javascript-output.php

	- javascript-mode.php renamed to hashover-javascript.php.
	- javascript-output.php renamed to javascript-mode.php.
	- `head` variable now only defined when needed.
	- `body` variable removed.
	- Conform to coding standard.
	- Minor bug fixes.


* hashover/api/count-link.php

	- Use strict comparison.


Changes by Jacob Barkdull 2015-06-25
--------------------------------------------------------------------------------
* hashover/scripts/setup.php

	- Strip "Magic Quotes" from POST, GET, and COOKIE data if enabled.


* hashover/scripts/statistics.php

	- Conform to coding standard.


Changes by Jacob Barkdull 2015-06-22
--------------------------------------------------------------------------------
* hashover/scripts/writecomments.php

	- Password cookie now stored as Blowfish hash (requires a re-login).
	- E-mail cookie now stored as Mcrypt string (requires a re-login).
	- Valid e-mail and HTTP prefix checks now also performed for cookies.
	- Login no longer performs spam check.


* hashover/scripts/encryption.php

	- `decrypt ()` now fails if any encryption hash offset is undefined.


* hashover/scripts/htmloutput.php

	- Password input placeholder and title changes to "Confirm Password" 
	  when editing a comment, as this is what that field is actually for. 
	  It is normally automatically filled by the browser.


* hashover/scripts/cookies.php
